<resources>
    <string name="app_name">Book Finder</string>
    <string name="msg_welcome">Hello, and welcome to the Book Finer App.</string>
    <string name="msg_instruction">Click on start, Scan the BarCode and get The book infos !</string>
    <string name="btn_start">Start !</string>
    <string name="msg_scan_ind">Scan ISBN Code !</string>
    <string name="msg_scan_ind2">(Bar code can be found in the back cover of the book)</string>
    <string name="btn_find">Find  !</string>
    <string name="hint_isbn">ISBN CODE</string>
    <string name="msg_got_isbn">We got ISBN.Now click find !</string>
    <string name="msg_scan_first">Scan book code first !</string>
    <string name="lbl_isbn_code">ISBN :</string>
    <string name="lbl_book_id">Book Id :</string>
    <string name="lbl_book_author">Author :</string>
    <string name="lbl_publisher">Publisher :</string>
    <string name="lbl_publication_date">Published on :</string>
    <string name="lbl_book_category">Category :</string>
    <string name="lbl_book_page_count">Page count :</string>
    <string name="lbl_book_link">Preview link :</string>
</resources>
